--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,27 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(https://th.bing.com/th?id=OIP.v7gy1k2y11B_SPqm4XsV_gHaE8&w=306&h=204&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.p{
+  font-size: xx-large;
+}
+.free{
+  font-size: xx-large;
+}
+.App{
+  background-image: url(https://th.bing.com/th?id=OIP.v7gy1k2y11B_SPqm4XsV_gHaE8&w=306&h=204&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2)
+}
+.App{
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
